--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="badgeColor">@android:color/tertiary_text_dark</color>
     <color name="oldPriceColor">@android:color/darker_gray</color>
     <color name="newPriceColor">@color/secondaryColor</color>
+    <color name="dividerColor">#54000000</color>
 </resources>
