--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="baseline_0_5x">4dp</dimen>
     <dimen name="baseline_1x">8dp</dimen>
     <dimen name="baseline_2x">16dp</dimen>
-    <dimen name="grid_cell_min_height">160dp</dimen>
+    <dimen name="grid_cell_min_height">176dp</dimen>
     <dimen name="progress_stroke_size">5dp</dimen>
     <dimen name="progress_size">16dp</dimen>
     <dimen name="screenshot_cell_size">120dp</dimen>
