--- a/app/src/main/res/layout/layout_deal_item.xml
+++ b/app/src/main/res/layout/layout_deal_item.xml
@@ -14,16 +14,17 @@
         <ImageView
                 android:id="@+id/image"
                 android:layout_width="0dp"
+                android:adjustViewBounds="true"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_height="78dp"
+                android:layout_height="wrap_content"
                 tools:src="@drawable/ic_placeholder"
                 app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
                 android:id="@+id/name"
                 app:layout_constraintTop_toBottomOf="@+id/image"
-                style="@style/DealsBaseTextStyle.Bold"
+                style="@style/BaseTextStyle.Bold"
                 android:layout_marginTop="@dimen/baseline_1x"
                 app:layout_constraintVertical_bias="0"
                 android:layout_marginLeft="@dimen/baseline_1x"
@@ -37,13 +38,14 @@
 
         <TextView
                 android:id="@+id/price"
-                style="@style/DealsBaseTextStyle"
+                style="@style/BaseTextStyle"
                 app:layout_constraintLeft_toLeftOf="@+id/name"
                 tools:text="$44.56"
                 app:layout_constraintBottom_toBottomOf="@+id/percentageCut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/timestamp"/>
 
         <TextView
                 android:id="@+id/stores"
@@ -55,10 +57,10 @@
                 android:maxLines="1"
                 android:gravity="end"
                 tools:text="Microsoft"
-                android:layout_marginTop="@dimen/baseline_1x"
+                android:layout_marginTop="@dimen/baseline_0_5x"
                 tools:drawableRight="@drawable/bg_store_color"
                 android:drawablePadding="@dimen/baseline_0_5x"
-                style="@style/DealsBaseTextStyle.Small"
+                style="@style/BaseTextStyle.Small"
                 app:layout_constraintHorizontal_bias="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,9 +73,9 @@
                 tools:text="2h ago"
                 android:textColor="?dividerColor"
                 app:layout_constraintLeft_toLeftOf="@+id/name"
-                style="@style/DealsBaseTextStyle.Small"
-                android:layout_marginTop="@dimen/baseline_1x"
+                style="@style/BaseTextStyle.Small"
                 app:layout_constraintTop_toBottomOf="@+id/name"
+                android:layout_marginTop="@dimen/baseline_0_5x"
                 app:layout_constraintVertical_bias="0"
                 app:layout_constraintBottom_toBottomOf="@+id/stores"
                 android:layout_width="wrap_content"
@@ -82,13 +84,14 @@
         <TextView
                 android:id="@+id/percentageCut"
                 android:layout_width="wrap_content"
+                app:layout_constraintTop_toTopOf="@+id/price"
                 app:layout_constraintRight_toRightOf="@+id/name"
                 app:layout_constraintBottom_toBottomOf="parent"
-                style="@style/DealsBaseTextStyle"
+                style="@style/BaseTextStyle"
                 android:layout_marginBottom="@dimen/baseline_1x"
                 android:textColor="?colorSecondary"
                 android:textStyle="bold"
-                android:text="-20%"
+                tools:text="-20%"
                 android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
