--- a/app/src/main/res/layout/fragment_deals.xml
+++ b/app/src/main/res/layout/fragment_deals.xml
@@ -41,7 +41,7 @@
             app:srcCompat="@drawable/ic_sort_list"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:tint="?colorOnPrimary"
+            app:tint="?colorOnSecondary"
             android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
