--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#008578</color>
-    <color name="primaryLightColor">#4cb5a7</color>
-    <color name="primaryDarkColor">#00574c</color>
+    <color name="primaryColor">#212121</color>
+    <color name="primaryLightColor">#484848</color>
+    <color name="primaryDarkColor">#000000</color>
     <color name="secondaryColor">#cfff92</color>
-    <color name="secondaryLightColor">#cfff92</color>
+    <color name="secondaryLightColor">#ffffc4</color>
+
+    <color name="material_drawer_selected_text">@color/primaryTextColor</color>
+    <color name="material_drawer_background">@color/primaryColor</color>
 
     <color name="badgeColor">@android:color/tertiary_text_dark</color>
-    <color name="oldPriceColor">?dividerColor</color>
-    <color name="newPriceColor">#fff</color>
+    <color name="oldPriceColor">@android:color/darker_gray</color>
+    <color name="newPriceColor">@color/secondaryColor</color>
     <color name="primaryTextColor">#ffffff</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="dividerColor">#C4ffffff</color>
