--- a/app/src/main/res/layout/layout_add_to_watch_list_chip_item.xml
+++ b/app/src/main/res/layout/layout_add_to_watch_list_chip_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:tools="http://schemas.android.com/tools"
+                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:orientation="vertical"
                                        style="@style/Widget.MaterialComponents.Chip.Filter"
                                        tools:text="Amazon"
+                                       app:checkedIcon="@drawable/ic_check"
                                        android:checked="true"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"/>
