--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorPrimaryVariant">@color/primaryLightColor</item>
@@ -11,8 +11,23 @@
         <item name="colorSecondaryVariant">@color/secondaryLightColor</item>
         <item name="colorOnSecondary">@color/secondaryTextColor</item>
 
-        <item name="material_drawer_selected">?colorOnPrimary</item>
-        <item name="material_drawer_selected_text">?colorPrimary</item>
+        <item name="materialAlertDialogTheme">@style/AppTheme.AlertDialog</item>
+
+        <item name="new_price_text_color">@color/newPriceColor</item>
+        <item name="swipe_refresh_background">@color/swipeToRefreshBackground</item>
+
+        <item name="material_drawer_header_selection_text">?colorOnSurface</item>
+        <item name="material_drawer_header_selection_subtext">@color/drawerHeaderSelectionSubText</item>
+        <item name="material_drawer_primary_icon">@color/drawerTextColor</item>
+        <item name="material_drawer_primary_text">@color/drawerTextColor</item>
+        <item name="material_drawer_selected">?colorSurface</item>
+        <item name="material_drawer_selected_text">@color/drawerSelectedTextColor</item>
+        <item name="material_drawer_background">?colorSurface</item>
+    </style>
+
+    <style name="AppTheme.AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorOnPrimary">@color/primaryTextColor</item>
     </style>
 
     <style name="AppTheme.BottomSheetDialog" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
