--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/dealsFragment"
-            android:name="de.r4md4c.gamedealz.deals.DealsFragment"
+            android:name="de.r4md4c.gamedealz.feature.deals.DealsFragment"
             android:label="@string/title_on_going_deals"
             tools:layout="@layout/fragment_deals"
             >
