--- a/features/deals/src/main/res/values/integers.xml
+++ b/features/deals/src/main/res/values/integers.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="filter_by_stores">Filter by Stores</string>
+    <integer name="deals_span_count">2</integer>
 </resources>
