--- a/common-ui/src/main/res/values/ids.xml
+++ b/common-ui/src/main/res/values/ids.xml
@@ -9,4 +9,5 @@
     <item name="errorText" type="id" />
     <item name="toolbar" type="id" />
     <item name="emptyResultsTitleText" type="id" />
+    <item name="nav_host_fragment" type="id" />
 </resources>
