--- a/features/search/src/main/res/layout/fragment_search.xml
+++ b/features/search/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,7 @@
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".search.SearchFragment">
+        tools:context=".feature.search.SearchFragment">
 
     <include layout="@layout/layout_toolbar"/>
 
