--- a/features/watchlist/src/main/res/layout/layout_add_to_watch_list.xml
+++ b/features/watchlist/src/main/res/layout/layout_add_to_watch_list.xml
@@ -6,18 +6,16 @@
 
     <include layout="@layout/layout_toolbar"/>
 
-    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-                                           android:layout_width="match_parent"
+    <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
                                            android:background="?android:attr/colorBackground"
                                            android:layout_marginTop="?actionBarSize"
                                            android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                           xmlns:app="http://schemas.android.com/apk/res-auto"
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="wrap_content"
-                                                           android:padding="@dimen/baseline_2x"
-                                                           android:theme="@style/AppTheme">
+                android:padding="@dimen/baseline_2x">
 
 
             <TextView
